src/test/ui/const-generics/issues/issue-76701-ty-param-in-const.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-76701-ty-param-in-const.rs:5:21
   |
LL | fn ty_param<T>() -> [u8; std::mem::size_of::<T>()] {
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: constant expression depends on a generic parameter
  --> $DIR/issue-76701-ty-param-in-const.rs:11:37
   |
LL | fn const_param<const N: usize>() -> [u8; N + 1] {
   |                                     ^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 2 previous errors

